# NeuroCLI

./: .gitignore  AGENTS.md  FileMapping.txt  FunctionIdeas.md  GEMINI.md  README.md  application_repair_plan.md  image_to_ascii.py  implementation_plan.md  manual_test_key.py  notes.txt  pyproject.toml  test_radar.py  test_refactor.py
api/: main.py
assets/notes/: prompt_ai_council.md
handoff/: README.md  codex_handoff.md  current_plan.md  gemini_handoff.md  shared_decisions.md
handoff/archive/: function_ideas.md  workspace_radar_plan.md
handoff/coordination/: codex_handoff.md  gemini_handoff.md  shared_decisions.md
handoff/plans/: current_plan.md  phase_5_direction.md  repair_plan.md
handoff/reference/: file_mapping.txt
neurocli_app/: art.py  command_modal.py  context_modal.py  git_modal.py  main.css  main.css_append  main.py  model_modal.py  modern.css  radar_modal.py  review_modal.py  theme.py  web_ui.css  web_ui.html  workflow_adapter.py
neurocli_core/: __init__.py  ai_services.py  code_formatter.py  config.py  diff_generator.py  engine.py  file_handler.py  git_engine.py  git_tools.py  llm_api.py  llm_api_gemini.py  llm_api_openai.py  radar_engine.py  workflow_service.py
tests/: messy.test.py  review_editor_sample.py  test_ai_services.py  test_api_main.py  test_diff_generator.py  test_engine.py  test_radar_engine.py  test_textual_workflow_adapter.py  testcli.py
tests/backups/: review_editor_sample_20260426_221654.py
tests/messy tests/: messy.test.py  messy_calculations.ts  messy_ship_inventory.jsx  (+2 more)
web_client/: package-lock.json  package.json
(+19 files in other folders)
