# pyproject.toml

[project]
name = "neurocli"
version = "0.1.0"
description = "An agentic, terminal-based AI assistant for developers."
dependencies = [
    "textual",
    "python-dotenv", # Add this line
    "google-generativeai",
    "textual-fspicker",
    "ruff",
]

[project.scripts]
neurocli = "neurocli_app.main:main"

[tool.setuptools.packages.find]
where = ["."]