[project]
name = "neurocli"
version = "0.1.0"
description = "An agentic, terminal-based AI assistant for developers."
dependencies = [
    "textual",
    "python-dotenv",
    "openai",                # ✅ OpenAI support
    "textual-fspicker",
    "ruff",
]

[project.scripts]
neurocli = "neurocli_app.main:main"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
